api adjustments
