# routes/auth.js
@@ -40,35 +40,6 @@ router.post("/Register", async (req, res, next) => {
   }
 });
 
-// router.post("/Login", async (req, res, next) => {
-//   try {
-//     // check that username exists
-//     const users = await DButils.execQuery("SELECT username FROM users");
-//     if (!users.find((x) => x.username === req.body.username))
-//       throw { status: 401, message: "Username or Password incorrect" };
-
-//     // check that the password is correct
-//     const user = (
-//       await DButils.execQuery(
-//         `SELECT * FROM users WHERE username = '${req.body.username}'`
-//       )
-//     )[0];
-
-//     if (!bcrypt.compareSync(req.body.password, user.password)) {
-//       throw { status: 401, message: "Username or Password incorrect" };
-//     }
-
-//     // Set cookie
-//     req.session.user_id = user.user_id;
-
-
-//     // return cookie
-//     res.status(200).send({ message: "login succeeded", success: true });
-//   } catch (error) {
-//     next(error);
-//   }
-// });
-
 router.post("/Login", async (req, res, next) => {
   try {
     // check that username exists
